fix: ✨ break the layout again

--- a/src/atoms/button/index.module.scss
+++ b/src/atoms/button/index.module.scss
@@ -20,6 +20,7 @@
 
   &.full {
     width: 100%;
+    white-space: nowrap;
 
     @include respond-to('desktop') {
       width: fit-content;
